--- a/src/pages/sport/sport.html
+++ b/src/pages/sport/sport.html
@@ -7,27 +7,18 @@
 <ion-content class="card-background-page">
 
   <ion-card>
-    <img src="img/card-saopaolo.png"/>
-    <div class="card-title">São Paulo</div>
-    <div class="card-subtitle">41 Listings</div>
+    <img src="assets/imgs/sport-dating.jpg"/>
+    <div class="card-title">Daily Challenge</div>
   </ion-card>
 
   <ion-card>
-    <img src="img/card-amsterdam.png"/>
-    <div class="card-title">Amsterdam</div>
-    <div class="card-subtitle">64 Listings</div>
+    <img src="assets/imgs/challenge.jpg"/>
+    <div class="card-title">Sport Dating</div>
   </ion-card>
 
   <ion-card>
-    <img src="img/card-sf.png"/>
-    <div class="card-title">San Francisco</div>
-    <div class="card-subtitle">72 Listings</div>
-  </ion-card>
-
-  <ion-card>
-    <img src="img/card-madison.png"/>
-    <div class="card-title">Madison</div>
-    <div class="card-subtitle">28 Listings</div>
+    <img src="assets/imgs/exercise.jpg"/>
+    <div class="card-title">Workout</div>
   </ion-card>
 
 </ion-content>
