--- a/src/pages/food/food-home/food-home.html
+++ b/src/pages/food/food-home/food-home.html
@@ -1,7 +1,7 @@
 <ion-header>
   <ion-navbar>
     <ion-title>
-      Contact
+      Nutrition
     </ion-title>
   </ion-navbar>
 </ion-header>
@@ -11,14 +11,18 @@
 <ion-content class="card-background-page">
 
   <ion-card>
-    <img src="assets/imgs/recipe_ideas.png"/>
+    <img src="assets/imgs/food/recipe_ideas.png"/>
     <div class="card-title">Recipe Ideas</div>
   </ion-card>
 
   <ion-card>
-    <img src="img/card-saopaolo.png"/>
-    <div class="card-title">São Paulo</div>
-    <div class="card-subtitle">41 Listings</div>
+    <img src="assets/imgs/food/food-challenge.png"/>
+    <div class="card-title">Daily Challenge</div>
+  </ion-card>
+
+  <ion-card>
+    <img src="assets/imgs/food/daily-menu.png"/>
+    <div class="card-title">Daily Menu</div>
   </ion-card>
 
 </ion-content>
