Add date to sport challenge

--- a/src/pages/sport/sport-challenge/sport-challenge.html
+++ b/src/pages/sport/sport-challenge/sport-challenge.html
@@ -6,6 +6,14 @@
 
 <ion-content class="card-background-page">
 
-
+  <div class="content">
+    <div class="dateContainer">
+      <div class="month">{{month}}</div>
+      <div class="day">{{day}}</div>
+    </div>
+  </div>
 
 </ion-content>
+
+
+<script src="sport-challenge.ts"></script>
