--- a/src/pages/sport/sport-challenge/sport-challenge.html
+++ b/src/pages/sport/sport-challenge/sport-challenge.html
@@ -11,7 +11,17 @@
       <div class="month">{{month}}</div>
       <div class="day">{{day}}</div>
     </div>
-  </div>
+
+    <div class="advice">Take the stairs today !</div>
+
+  <ion-item class="done">
+    <ion-label>Done</ion-label>
+    <ion-checkbox color="danger"></ion-checkbox>
+  </ion-item>
+
+</div>
+
+
 
 </ion-content>
 
