Ajouts de Workout

--- a/src/pages/sport/sport-workout/sport-workout.html
+++ b/src/pages/sport/sport-workout/sport-workout.html
@@ -4,8 +4,10 @@
   </ion-navbar>
 </ion-header>
 
-<ion-content class="card-background-page">
-
-  
-
+<ion-content>
+  <ion-list>
+    <button ion-item detail-push *ngFor="let item of items" (click)="itemSelected(item)">
+      {{ item }}
+    </button>
+  </ion-list>
 </ion-content>
