Description de l'exercice OK

--- a/src/pages/sport/sport-workout-leg/sport-workout-leg.html
+++ b/src/pages/sport/sport-workout-leg/sport-workout-leg.html
@@ -21,7 +21,7 @@
         <i class="em em-zap"></i>
       </ion-note>
     </button>
-    <button ion-item (click)="SideLunge">
+    <button ion-item (click)="SideLunge()">
         Side lunge
         <p>15 repetitions</p>
         <ion-note item-end>
@@ -33,7 +33,7 @@
       Intermediate
     </ion-list-header>
 
-    <button ion-item (click)="DoubleLegLift">
+    <button ion-item (click)="DoubleLegLift()">
       Double leg lift
       <p>20 repetitions</p>
       <ion-note item-end>
@@ -42,7 +42,7 @@
       </ion-note>
     </button>
 
-    <button ion-item (click)="SquatJump">
+    <button ion-item (click)="SquatJump()">
       Squat jump
       <p>10 repetitions</p>
       <ion-note item-end>
@@ -55,7 +55,7 @@
       Hard
     </ion-list-header>
 
-    <button ion-item (click)="LegPullFront">
+    <button ion-item (click)="LegPullFront()">
       Leg pull front
       <p>20 repetitions</p>
       <ion-note item-end>
@@ -64,7 +64,7 @@
         <i class="em em-zap"></i>
       </ion-note>
     </button>
-    <button ion-item (click)="ScissorBoxJump">
+    <button ion-item (click)="ScissorBoxJump()">
         Scissor box jump
         <p>20 repetitions</p>
         <ion-note item-end>
