--- a/src/pages/sport/sport-home/sport-home.html
+++ b/src/pages/sport/sport-home/sport-home.html
@@ -12,12 +12,12 @@
   </ion-card>
 
   <ion-card (click)="sportDating()">
-    <img src="assets/imgs/sport-dating.jpg"/>
+    <img src="assets/imgs/sport-dating2.jpg"/>
     <div class="card-title">Sport Dating</div>
   </ion-card>
 
   <ion-card (click)="sportWorkout()">
-    <img src="assets/imgs/exercise.jpg"/>
+    <img src="assets/imgs/exercise2.jpg"/>
     <div class="card-title">Workout</div>
   </ion-card>
 
