Ajout du swipe retour

--- a/src/pages/sport/sport-workout/sport-workout.html
+++ b/src/pages/sport/sport-workout/sport-workout.html
@@ -25,7 +25,7 @@
     </ion-header>
 
 
-    <ion-content>
+    <ion-content (swipe)="swipeEvent($event)">
         <div [ngSwitch]="bodyPart">
           <ion-list *ngSwitchCase="'Leg'">
               <button ion-item (click)="SingleLegLift()">
