--- a/src/pages/sport/sport-workout/sport-exercises/sport-workout-leg-simpleleglift/sport-workout-leg-simpleleglift.html
+++ b/src/pages/sport/sport-workout/sport-exercises/sport-workout-leg-simpleleglift/sport-workout-leg-simpleleglift.html
@@ -10,7 +10,7 @@
     
         <img src="assets/imgs/double_leg_lift.jpg"/>
     
-        <ion-card-content>
+        <ion-card-content (swipe)="swipeEvent($event)">
           <ion-card-title>
               Simple leg lift
           </ion-card-title>
