--- a/src/pages/sport/sport-challenge/sport-challenge.html
+++ b/src/pages/sport/sport-challenge/sport-challenge.html
@@ -14,10 +14,12 @@
 
     <div class="advice">Take the stairs today !</div>
 
-  <ion-item class="done">
-    <ion-label>Done</ion-label>
-    <ion-checkbox color="danger"></ion-checkbox>
-  </ion-item>
+  <div class="checkbox-container">
+    <ion-item class="done">
+      <ion-label>Done</ion-label>
+      <ion-checkbox></ion-checkbox>
+    </ion-item>
+  </div>
 
 </div>
 
