Add food challenge

--- a/src/pages/food/food-home/food-home.html
+++ b/src/pages/food/food-home/food-home.html
@@ -15,7 +15,7 @@
     <div class="card-title">Recipe Ideas</div>
   </ion-card>
 
-  <ion-card>
+  <ion-card (click)="FoodChallenge()">
     <img src="assets/imgs/food/food-challenge.png"/>
     <div class="card-title">Daily Challenge</div>
   </ion-card>
