Set food challenge color to green

--- a/src/pages/sport/sport-challenge/sport-challenge.html
+++ b/src/pages/sport/sport-challenge/sport-challenge.html
@@ -7,14 +7,14 @@
 <ion-content class="card-background-page">
 
   <div class="content">
-    <div class="dateContainer">
+    <div class="sport-date-container">
       <div class="month">{{month}}</div>
       <div class="day">{{day}}</div>
     </div>
 
     <div class="advice">Take the stairs today !</div>
 
-  <div class="checkbox-container">
+  <div class="sport-checkbox-container">
     <ion-item class="done">
       <ion-label>Done</ion-label>
       <ion-checkbox></ion-checkbox>
