Set header bar color

--- a/src/pages/food/food-starters/food-starters.html
+++ b/src/pages/food/food-starters/food-starters.html
@@ -1,7 +1,7 @@
 <link href="https://afeld.github.io/emoji-css/emoji.css" rel="stylesheet">
 
 <ion-header>
-  <ion-navbar>
+  <ion-navbar primary-rose>
     <ion-title>Starters</ion-title>
   </ion-navbar>
 </ion-header>
@@ -21,7 +21,7 @@
           <ion-icon name="md-information-circle"></ion-icon>
         </button>
         <br/>
-        <h2> 
+        <h2>
           <p>{{ item.calories }} kcal </p>
           <br/>
           <div *ngIf="item.show">
