--- a/src/pages/food/food-challenge/food-challenge.html
+++ b/src/pages/food/food-challenge/food-challenge.html
@@ -1,5 +1,5 @@
 <ion-header>
-  <ion-navbar>
+  <ion-navbar primary-green>
     <ion-title>Daily Challenge</ion-title>
   </ion-navbar>
 </ion-header>
