Add menu daily pages

--- a/src/pages/food/food-desserts/food-desserts.html
+++ b/src/pages/food/food-desserts/food-desserts.html
@@ -2,7 +2,7 @@
 
 <ion-header>
   <ion-navbar>
-    <ion-title>Starters</ion-title>
+    <ion-title>Desserts</ion-title>
   </ion-navbar>
 </ion-header>
 
@@ -15,6 +15,8 @@
             <i class="{{ emoji }}"></i>
           </li>
         </ul>
+
+
         <button item-end class="buttonInfo" clear color="dark" ion-button icon-only (click)="onInfoClick($event, i)">
           <ion-icon name="md-information-circle"></ion-icon>
         </button>
