--- a/src/pages/food/food-home/food-home.html
+++ b/src/pages/food/food-home/food-home.html
@@ -20,7 +20,7 @@
     <div class="card-title">Daily Challenge</div>
   </ion-card>
 
-  <ion-card>
+  <ion-card (click)="dailyMenu()">
     <img src="assets/imgs/food/daily-menu.png"/>
     <div class="card-title">Daily Menu</div>
   </ion-card>
