--- a/src/pages/sport/sport-workout/sport-workout.html
+++ b/src/pages/sport/sport-workout/sport-workout.html
@@ -36,7 +36,7 @@
                 </button>
                 <button ion-item (click)="SideLunge()">
                     Side lunge
-                    <p>15 repetitions</p>
+                    <div class ="soustitre">15 repetitions</div>
                     <ion-note item-end>
                       <i class="em em-zap"></i>
                     </ion-note>
@@ -44,7 +44,7 @@
 
                 <button ion-item (click)="DoubleLegLift()">
                   Double leg lift
-                  <p>20 repetitions</p>
+                  <div class ="soustitre">20 repetitions</div>
                   <ion-note item-end>
                     <i class="em em-zap"></i>
                     <i class="em em-zap"></i>
@@ -53,7 +53,7 @@
 
                 <button ion-item (click)="SquatJump()">
                   Squat jump
-                  <p>10 repetitions</p>
+                  <div class ="soustitre">10 repetitions</div>
                   <ion-note item-end>
                     <i class="em em-zap"></i>
                     <i class="em em-zap"></i>
@@ -62,7 +62,7 @@
 
                 <button ion-item (click)="LegPullFront()">
                   Leg pull front
-                  <p>20 repetitions</p>
+                  <div class ="soustitre">20 repetitions</div>
                   <ion-note item-end>
                     <i class="em em-zap"></i>
                     <i class="em em-zap"></i>
@@ -71,7 +71,7 @@
                 </button>
                 <button ion-item (click)="ScissorBoxJump()">
                     Scissor box jump
-                    <p>20 repetitions</p>
+                    <div class ="soustitre">20 repetitions</div>
                     <ion-note item-end>
                       <i class="em em-zap"></i>
                       <i class="em em-zap"></i>
@@ -83,14 +83,14 @@
           <ion-list *ngSwitchCase="'Abdos'">
             <button ion-item (click)="AbdominalHold30()">
                 Abdominal hold
-                <p>30 seconds</p>
+                <div class ="soustitre">30 seconds</div>
                 <ion-note item-end>
                   <i class="em em-zap"></i>
                 </ion-note>
               </button>
               <button ion-item (click)="SideCrunch()">
                   Side crunch
-                  <p>10 repetitions</p>
+                  <div class ="soustitre">10 repetitions</div>
                   <ion-note item-end>
                     <i class="em em-zap"></i>
                   </ion-note>
@@ -98,7 +98,7 @@
 
                 <button ion-item (click)="AbdominalHold60()">
                   Abdominal hold
-                  <p>60 seconds</p>
+                  <div class ="soustitre">60 seconds</div>
                   <ion-note item-end>
                     <i class="em em-zap"></i>
                     <i class="em em-zap"></i>
@@ -107,7 +107,7 @@
 
               <button ion-item (click)="AbdominalHold90()">
                 Abdominal hold
-                <p>90 seconds</p>
+                <div class ="soustitre">90 seconds</div>
                 <ion-note item-end>
                   <i class="em em-zap"></i>
                   <i class="em em-zap"></i>
@@ -119,14 +119,14 @@
         <ion-list *ngSwitchCase="'Arms'">
           <button ion-item (click)="BenchDips()">
               Bench Dips
-              <p>8 repetitions</p>
+              <div class ="soustitre">8 repetitions</div>
               <ion-note item-end>
                 <i class="em em-zap"></i>
               </ion-note>
             </button>
             <button ion-item (click)="BarbelCurl()">
                Barbel Curl
-                <p>10 repetitions</p>
+                <div class ="soustitre">10 repetitions</div>
                 <ion-note item-end>
                   <i class="em em-zap"></i>
                   <i class="em em-zap"></i>
@@ -135,7 +135,7 @@
 
               <button ion-item (click)="TricepsPushDown()">
                 Triceps pushdown
-                <p>25 repetitions</p>
+                <div class ="soustitre">25 repetitions</div>
                 <ion-note item-end>
                   <i class="em em-zap"></i>
                   <i class="em em-zap"></i>
@@ -144,7 +144,7 @@
 
             <button ion-item (click)="ConcentrationCurl()">
               Concentration Curl
-              <p>12 repetitions</p>
+              <div class ="soustitre">12 repetitions</div>
               <ion-note item-end>
                 <i class="em em-zap"></i>
                 <i class="em em-zap"></i>
@@ -157,14 +157,14 @@
       <ion-list *ngSwitchCase="'Shoulders'">
         <button ion-item (click)="OneArmSideLaterals()">
             One-Arm Side Laterals
-            <p>12 repetitions</p>
+            <div class ="soustitre">12 repetitions</div>
             <ion-note item-end>
               <i class="em em-zap"></i>
             </ion-note>
           </button>
           <button ion-item (click)="LyingRearDeltRaise()">
             Lying Rear Delt Raise
-              <p>10 repetitions</p>
+              <div class ="soustitre">10 repetitions</div>
               <ion-note item-end>
                 <i class="em em-zap"></i>
               </ion-note>
@@ -172,7 +172,7 @@
 
             <button ion-item (click)="Pushups()">
               Pushups
-              <p>20 repetitions</p>
+              <div class ="soustitre">20 repetitions</div>
               <ion-note item-end>
                 <i class="em em-zap"></i>
                 <i class="em em-zap"></i>
@@ -181,7 +181,7 @@
 
           <button ion-item (click)="ReverseFlyes()">
             Reverse Flyes
-            <p>15 repetitions</p>
+            <div class ="soustitre">15 repetitions</div>
             <ion-note item-end>
               <i class="em em-zap"></i>
               <i class="em em-zap"></i>
