--- a/src/pages/food/food-home/food-home.html
+++ b/src/pages/food/food-home/food-home.html
@@ -10,7 +10,7 @@
 
 <ion-content class="card-background-page">
 
-  <ion-card>
+  <ion-card (click)="recipesHome()">
     <img src="assets/imgs/food/recipe_ideas.png"/>
     <div class="card-title">Recipe Ideas</div>
   </ion-card>
