--- a/src/pages/feed/feed.html
+++ b/src/pages/feed/feed.html
@@ -1,7 +1,7 @@
 <ion-header>
   <ion-navbar primary-rose>
     <ion-title>
-      Title
+      News feed
     </ion-title>
   </ion-navbar>
 </ion-header>
@@ -23,7 +23,7 @@
     <img src="../assets/imgs/feed/art1.png">
 
     <ion-card-content>
-      <p>Just two minutes extra stair climbing a day is enough to stop
+      <p>Just two minutes extra stairs climbing a day is enough to stop
       average middle age weight gain.</p>
     </ion-card-content>
 
