--- a/src/pages/feed/feed.html
+++ b/src/pages/feed/feed.html
@@ -1,7 +1,7 @@
 <ion-header>
   <ion-navbar primary-rose>
     <ion-title>
-      News feed
+      Feed
     </ion-title>
   </ion-navbar>
 </ion-header>
