--- a/src/pages/food/food-home/food-home.html
+++ b/src/pages/food/food-home/food-home.html
@@ -1,7 +1,7 @@
 <ion-header>
   <ion-navbar primary-rose>
     <ion-title>
-      Nutrition
+      Food
     </ion-title>
   </ion-navbar>
 </ion-header>
