--- a/src/pages/feed/feed.html
+++ b/src/pages/feed/feed.html
@@ -3,6 +3,11 @@
     <ion-title>
       News feed
     </ion-title>
+    <ion-buttons end>
+        <button ion-button icon-only (click)="pushSettings()">
+                <ion-icon class="icon"  name="settings"></ion-icon>
+        </button>
+    </ion-buttons>
   </ion-navbar>
 </ion-header>
 
