--- a/src/pages/sport/sport-home/sport-home.html
+++ b/src/pages/sport/sport-home/sport-home.html
@@ -1,6 +1,11 @@
 <ion-header>
   <ion-navbar>
     <ion-title>Sport</ion-title>
+    <ion-buttons end>
+        <button ion-button icon-only (click)="pushSettings()">
+                <ion-icon class="icon"  name="settings"></ion-icon>
+        </button>
+    </ion-buttons>
   </ion-navbar>
 </ion-header>
 
