--- a/src/pages/profile/profile-home/profile-home.html
+++ b/src/pages/profile/profile-home/profile-home.html
@@ -13,14 +13,14 @@
     <ion-item>
         <h2 class="profile-name">Richard Smith</h2>
         <ion-avatar item-end>
-            <img src="../assets/imgs/avatar.jpg" class="avatar" />
+            <img src="../assets/imgs/index.png" class="avatar" />
         </ion-avatar>
     </ion-item>
 
     <ion-slides pager>
         <ion-slide>
 
-            <h2>Daily stats</h2>
+            <h2 class="slide-title">Daily stats</h2>
             <div class="container">
                 <div class="containerHeader">Calories consumed today</div>
                 <div class="containerValue">1873</div>
@@ -37,7 +37,11 @@
             <div>
                 <h2>Level: 28</h2>
                 <p>You are a veteran. No one can stop you!</p>
-                <img src="../assets/imgs/championcup.png" />
+                <div class="badges">
+                <img src="../assets/imgs/badge1.png" />
+                <img src="../assets/imgs/badge2.png" />
+                <img src="../assets/imgs/badge3.png" />
+                </div>
                 <p>You've reached the 400 km bar!</p>
             </div>
 
