--- a/src/pages/settings/settings.html
+++ b/src/pages/settings/settings.html
@@ -5,11 +5,9 @@
 </ion-header>
 <ion-content>
     <ion-item>
-        <ion-avatar>
-            <img src="../assets/imgs/avatar.jpg" class="avatar" />
-        </ion-avatar>
+        <img src="../assets/imgs/index.png" class="avatar"  />
     </ion-item>
-    <ion-list>
+    <ion-list class="infosUser">
         <ion-item>
             <ion-label>First Name</ion-label>
             <ion-input value="Richard "></ion-input>
