Add challenges toast, change feed color

--- a/src/pages/food/food-challenge/food-challenge.html
+++ b/src/pages/food/food-challenge/food-challenge.html
@@ -17,7 +17,7 @@
   <div class="food-checkbox-container">
     <ion-item class="done">
       <ion-label>Done</ion-label>
-      <ion-checkbox (click)="presentToast()"></ion-checkbox>
+      <ion-checkbox (click)="presentToast()" checked="false"></ion-checkbox>
     </ion-item>
   </div>
 
