--- a/src/pages/food/food-starters/food-starters.html
+++ b/src/pages/food/food-starters/food-starters.html
@@ -8,7 +8,7 @@
 
 <ion-content class="card-background-page">
   <ion-list>
-    <ion-item class="buttonList" detail-push *ngFor="let item of items; let i = index" (click)="itemSelected(item.title)">
+    <ion-item class="buttonList" detail-push *ngFor="let item of items; let i = index">
 
       <ion-thumbnail item-start>
         <img src="{{item.source}}"/>
