--- a/src/pages/sport/sport-challenge/sport-challenge.html
+++ b/src/pages/sport/sport-challenge/sport-challenge.html
@@ -17,7 +17,7 @@
   <div class="sport-checkbox-container">
     <ion-item class="done">
       <ion-label>Done</ion-label>
-      <ion-checkbox></ion-checkbox>
+      <ion-checkbox (click)="presentToast()"></ion-checkbox>
     </ion-item>
   </div>
 
