Edit style Profile

--- a/src/pages/profile/profile-home/profile-home.html
+++ b/src/pages/profile/profile-home/profile-home.html
@@ -19,31 +19,31 @@
 
     <ion-slides pager>
         <ion-slide>
-
+            <div class="dailyStats">
             <h2 class="slide-title">Daily stats</h2>
             <div class="container">
-                <div class="containerHeader">Calories consumed today</div>
                 <div class="containerValue">1873</div>
+                <div class="containerHeader">Kcal consumed</div>
             </div>
             <div class="container">
-                <div class="containerHeader">Calories burned today</div>
                 <div class="containerValue">342</div>
+                <div class="containerHeader">Kcal burned</div>
             </div>
 
             <div class="container">
-                <div class="containerHeader">Kilometers walked today</div>
                 <div class="containerValue">4.2</div>
+                <div class="containerHeader">Km walked</div>
             </div>
-            <div>
-                <h2>Level: 28</h2>
-                <p>You are a veteran. No one can stop you!</p>
-                <div class="badges">
-                <img src="../assets/imgs/badge1.png" />
-                <img src="../assets/imgs/badge2.png" />
-                <img src="../assets/imgs/badge3.png" />
-                </div>
-                <p>You've reached the 400 km bar!</p>
             </div>
+           
+            <h2>Level: 28</h2>
+            <p class="text">You are a veteran. No one can stop you!</p>
+            <div class="badges">
+            <img src="../assets/imgs/badge1.png" />
+            <img src="../assets/imgs/badge2.png" />
+            <img src="../assets/imgs/badge3.png" />
+            </div>
+            <p class="text">You've reached the 400 km bar!</p>
 
         </ion-slide>
 
