Ajoute sport dating + chat

--- a/src/pages/sport/sport-dating/sport-dating.html
+++ b/src/pages/sport/sport-dating/sport-dating.html
@@ -1,11 +1,14 @@
 <ion-header>
   <ion-navbar>
     <ion-title>Sport Dating</ion-title>
+    <ion-buttons end>
+      <button ion-button (click)="addPerson('Jean-Pierre')"><ion-icon name="add"></ion-icon>&nbsp;Add Marker</button>
+    </ion-buttons>
   </ion-navbar>
 </ion-header>
 
-<ion-content class="card-background-page">
+<ion-content>
 
-  
+  <div #map id="map"></div>
 
 </ion-content>
