--- a/src/index.html
+++ b/src/index.html
@@ -15,6 +15,8 @@
   <meta name="apple-mobile-web-app-capable" content="yes">
   <meta name="apple-mobile-web-app-status-bar-style" content="black">
 
+  <script src="http://maps.google.com/maps/api/js?key=AIzaSyC6qW9loZpO1lWIM3U9l-FDiPTNbD722Jo"></script>
+
   <!-- cordova.js required for cordova apps -->
   <script src="cordova.js"></script>
 
