Mise à jour chat

--- a/src/pages/sport/sport-dating/sport-dating-chat/sport-dating-chat.html
+++ b/src/pages/sport/sport-dating/sport-dating-chat/sport-dating-chat.html
@@ -44,7 +44,7 @@
                                 placeholder="Text Input"
                                 [(ngModel)]="editorMsg"
                                 (keyup.enter)="sendMsg()"
-                                (focus)="onFocus()">
+                                (ion-focus)="onFocus()">
                   </ion-textarea>
               </ion-col>
               <ion-col col-2>
