--- a/src/pages/food/food-home/food-home.html
+++ b/src/pages/food/food-home/food-home.html
@@ -27,7 +27,7 @@
 
   <ion-card (click)="dailyMenu()">
     <img src="assets/imgs/food/daily-menu.png"/>
-    <div class="card-title">Daily Menu</div>
+    <div class="card-title">Daily Menu (RU)</div>
   </ion-card>
 
 </ion-content>
