Format Profile and Settings

--- a/src/pages/profile/profile-home/profile-home.html
+++ b/src/pages/profile/profile-home/profile-home.html
@@ -1,6 +1,6 @@
 <ion-header>
     <ion-navbar>
-        <ion-title>Profile</ion-title>
+        <ion-title><img src="../assets/imgs/index.png" class="avatar"/><div class="name">Richard Smith</div></ion-title>
         <ion-buttons end>
                 <button ion-button icon-only (click)="pushSettings()">
                         <ion-icon class="icon"  name="settings"></ion-icon>
@@ -10,12 +10,12 @@
 </ion-header>
 
 <ion-content class="profile-page">
-    <ion-item>
+    <!--<ion-item>
         <h2 class="profile-name">Richard Smith</h2>
         <ion-avatar item-end>
             <img src="../assets/imgs/index.png" class="avatar" />
         </ion-avatar>
-    </ion-item>
+    </ion-item>-->
 
     <ion-slides pager>
         <ion-slide>
@@ -29,13 +29,13 @@
                 <div class="containerValue">342</div>
                 <div class="containerHeader">Kcal burned</div>
             </div>
-
+            <br/>
             <div class="container">
                 <div class="containerValue">4.2</div>
                 <div class="containerHeader">Km walked</div>
             </div>
             </div>
-           
+
             <h2>Level: 28</h2>
             <p class="text">You are a veteran. No one can stop you!</p>
             <div class="badges">
