Add button done on exercise pages

--- a/src/pages/sport/sport-workout/sport-exercises/sport-workout-abdos-abdominalhold/sport-workout-abdos-abdominalhold.html
+++ b/src/pages/sport/sport-workout/sport-exercises/sport-workout-abdos-abdominalhold/sport-workout-abdos-abdominalhold.html
@@ -23,4 +23,7 @@
           </p>
         </ion-card-content>  
       </ion-card>
+      <div text-center>
+        <button ion-button style="background-color:#F95F62;" (click)="valider()">Done</button>
+      </div>
     </ion-content>
