--- a/src/pages/sport/sport-workout/sport-exercises/sport-workout-leg-simpleleglift/sport-workout-leg-simpleleglift.html
+++ b/src/pages/sport/sport-workout/sport-exercises/sport-workout-leg-simpleleglift/sport-workout-leg-simpleleglift.html
@@ -8,7 +8,7 @@
 
       <ion-card>
 
-        <img src="assets/imgs/double_leg_lift.jpg"/>
+        <img id ="image" src="assets/imgs/double_leg_lift.jpg"/>
 
         <ion-card-content >
           <ion-card-title>
