--- a/src/pages/sport/sport-workout/sport-exercises/sport-workout-shoulders-onearmsidelaterals/sport-workout-shoulders-onearmsidelaterals.html
+++ b/src/pages/sport/sport-workout/sport-exercises/sport-workout-shoulders-onearmsidelaterals/sport-workout-shoulders-onearmsidelaterals.html
@@ -18,8 +18,7 @@
               12 repeats each side
           </h2>
 
-<p>While maintaining the torso stationary (no swinging), lift the dumbbell to your side with a slight bend on the elbow and your hand slightly tilted forward as if pouring water in a glass. Continue to go up until you arm is parallel to the floor. Exhale as you execute this movement and pause for a second at the top.</p>
-<p>Lower the dumbbell back down slowly to the starting position as you inhale.</p>
+<p>While maintaining the torso stationary (no swinging), lift the dumbbell to your side with a slight bend on the elbow and your hand slightly tilted forward as if pouring water in a glass. Continue to go up until you arm is parallel to the floor. </p>
 
         </ion-card-content>
       </ion-card>
